--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Hero with Video Background -->
   <section class="hero-video">
     <video autoplay muted loop playsinline class="bg-video">
-      <source src="v1.mp4" type="video/mp4">
+      <source src="vid-1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 
@@ -101,3 +101,4 @@
 
 </body>
 </html>
+
